# mystream

./: CMakeLists.txt
src/: benchmark.cpp  header.h  initialize.cpp  stream.cpp  test.cpp
